[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/BackgroundGame.jpg" type="Texture" id=3]
[ext_resource path="res://Weapons/Buffs_Container.gd" type="Script" id=4]
[ext_resource path="res://Player/Player_Container.gd" type="Script" id=6]
[ext_resource path="res://Asteroid/Asteroid_Container.gd" type="Script" id=7]
[ext_resource path="res://UI/Level.gd" type="Script" id=8]
[ext_resource path="res://Game.gd" type="Script" id=9]
[ext_resource path="res://Enemy/Enemy_Container.gd" type="Script" id=10]

[node name="Game" type="Node2D"]
script = ExtResource( 9 )
__meta__ = {
"_edit_horizontal_guides_": [ 68.0 ],
"_editor_description_": "The root of the scene"
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1600.0
margin_bottom = 1200.0
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
visible = false
position = Vector2( 512.5, 325 )
scale = Vector2( 0.644375, 0.58 )
texture = ExtResource( 3 )

[node name="Player_Container" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Asteroid_Container" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Enemy_Container" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="Buffs_Container" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Effects" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/HUD"]
anchor_right = 1.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI/HUD"]
margin_left = 15.0
margin_top = 13.0
margin_right = 55.0
margin_bottom = 27.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="Label" parent="UI/HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -215.0
margin_top = 13.0
margin_right = -15.0
margin_bottom = 113.0
align = 2

[node name="Level" type="Label" parent="UI/HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 13.0
margin_right = 20.0
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="UI"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -90.0
margin_bottom = -90.0
text = "PAUSED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 586.0
color = Color( 0, 0, 0, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="UI/Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.5
margin_top = 115.0
margin_right = 74.5
margin_bottom = 165.0
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="UI/Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.5
margin_top = 180.0
margin_right = 74.5
margin_bottom = 230.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="End" type="Button" parent="UI/Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.5
margin_top = 50.0
margin_right = 74.5
margin_bottom = 100.0
text = "End"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Control" parent="UI"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/Level"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -100.0
margin_bottom = 100.0
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="UI/Level"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -50.0
margin_bottom = -36.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtitle" type="Label" parent="UI/Level"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 35.0
margin_bottom = 49.0
align = 1
valign = 1

[node name="Timer" type="Timer" parent="UI/Level"]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="UI/Menu/Restart" to="UI/Menu" method="_on_Restart_pressed"]
[connection signal="pressed" from="UI/Menu/Quit" to="UI/Menu" method="_on_Quit_pressed"]
[connection signal="pressed" from="UI/Menu/End" to="UI/Menu" method="_on_End_pressed"]
[connection signal="timeout" from="UI/Level/Timer" to="UI/Level" method="_on_Timer_timeout"]
